deleted service register rol openapi & controller
